--- a/todolist/styles.css
+++ b/todolist/styles.css
@@ -43,11 +43,11 @@ h2 {
   padding: 10px;
   border: none;
   border-radius: 5px;
-  background-color: #2e60ea;
+  background-color: #9198e5;
 }
 
 #input-button:hover {
-  background-color: #9eb7fd;
+  background-color: #bca7f5;
 }
 
 ul {
@@ -58,10 +58,9 @@ ul {
 }
 
 li {
-  border: 1px solid #fff;
+  border: 1px solid #2e60ea;
   border-radius: 5px;
   margin: 10px 0;
-  padding: 10px;
 }
 
 .buttons-container {
@@ -94,9 +93,15 @@ li {
 }
 
 .tasks-container {
+  background-color: rgb(41, 33, 33);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 5px;
+}
+
+span {
+  color: #fff;
 }
 
 @media (max-width: 500px) {
